Installing gold on Gentoo

--- a/Gold.mw
+++ b/Gold.mw
@@ -1,58 +1,21 @@
-{{InfoBox stack
-|{{InfoBox wikipedia|Gold (linker)|header=true}}
-}}
+gold is a new linker intended as a replacement for the ''ld.bfd'' linker.
 
-'''gold''' is [[Article description::a new linker intended as a replacement for the {{c|ld.bfd}} linker.]]
+== Installing gold on Gentoo ==
 
-The two installed linkers are available directly as {{c|ld.bfd}} and {{c|ld.gold}} respectively. Additionally, the default linker is also installed as {{c|ld}} - and this binary is used by compilers.
+In order to have gold installed, an ''EXTRA_ECONF'' override has to be set for {{Package|sys-devel/binutils}}.
 
-== Installation ==
-
-Gold can be enabled by setting the <code>gold</code> USE flag for {{Package|sys-devel/binutils}}. Additionally, setting <code>default-gold</code> will make {{c|ld.gold}} the default linker.
-
-{{FileBox|filename=/etc/portage/package.use/gold|lang=ini|1=
-# enable gold and set it as default
-sys-devel/binutils      gold default-gold
-}}
-
-After setting the USE flags, re-install binutils:
-
-{{Emerge|params+=--changed-use --deep --oneshot --verbose|sys-devel/binutils}}
-
-== Configuration ==
-
-=== Switching the default linker ===
-
-==== The easy way ====
-
-The {{Package|sys-devel/binutils-config}} package can be used to set the default:
-
-{{RootCmd|binutils-config --linker ld.gold|output=<pre>
-* Setting default linker to ld.gold for x86_64-pc-linux-gnu-2.32 ...                            [ ok ]
-</pre>
-}}
-
-If using [[crossdev]], the linker for a cross-compile toolchain can be switched by additionally providing the <code>CHOST</code>. For example, to switch the <code>arm64</code> linker back to {{c|ld.bfd}}, run:
-
-{{RootCmd|binutils-config --linker ld.bfd aarch64-unknown-linux-gnu|output=<pre>
- * Setting default linker to ld.bfd for aarch64-unknown-linux-gnu-2.32 ...                      [ ok ]
-</pre>
-}}
-
-==== The hard way (manually) ====
-
-The default linker can be changed immediately by linking {{c|ld}} to {{c|ld.gold}} in the {{Path|binutils}} directory.
-
-{{Cmd|readlink -f /usr/bin/ld|output=<pre>
-/usr/x86_64-pc-linux-gnu/binutils-bin/2.22/ld
+{{File|/etc/portage/env/gold|Environment overrides to enable gold build|<pre>
+EXTRA_ECONF="--enable-gold=yes"
 </pre>}}
 
-Hard link:
+If you'd like gold to be default linker (''ld''), you can use instead:
 
-{{RootCmd|ln -f /usr/x86_64-pc-linux-gnu/binutils-bin/2.22/ld.gold /usr/x86_64-pc-linux-gnu/binutils-bin/2.22/ld}}
+{{File|/etc/portage/env/gold|Environment overrides to enable gold build|<pre>
+EXTRA_ECONF="--enable-gold=default"
+</pre>}}
 
-Symbolic link:
+After any of the above, enable it for the binutils package:
 
-{{RootCmd|ln -sf ld.gold /usr/x86_64-pc-linux-gnu/binutils-bin/2.22/ld}}
-
-[[Category:Core system]] [[Category:Compilation]]
+{{File|/etc/portage/package.env|Enabling ''gold'' override for binutils|<pre>
+sys-devel/binutils gold
+</pre>}}
