create stub page for GNOME

--- a/GNOME.mw
+++ b/GNOME.mw
@@ -1,34 +1,11 @@
-{{InfoBox stack
-|{{InfoBox homepage|https://www.gnome.org/|header=true}}
-|{{InfoBox wikipedia}}
-|{{InfoBox github|gentoo/gnome}}
-|{{InfoBox guide|GNOME}}
-|{{InfoBox project|GNOME}}
-}}
+'''GNOME''' Is a feature-rich desktop. It is one of the most widely-used desktops for Linux. It has been an important part of Gentoo for many years. As of 2011-12-28, The GNOME 2 series is "stable" in Gentoo, and the GNOME 3 series is still marked "unstable." Thus, "emerge gnome" on a stable system installs GNOME 2, while the same command will emerge GNOME 3 if you have "~" in your USE statement in /etc/make.conf.
 
-GNOME is [[Article description::a feature-rich desktop environment provided by the [https://www.gnome.org GNOME project].]] It is one of the most widely-used desktop environments for Linux desktops and has been an important part of Gentoo for many years.
+Because it is so rich, "emerge gnome" requires a long time to complete. It installs a large collection of applications.
 
-Gentoo currently has GNOME version 3, that features a redesigned UI, which is a total upheaval for users of GNOME 2. Getting familiar with it, at least for its basics, only takes a matter of minutes provided the user is directed to the right entry point. A rather good entry point to quickly get familiar with this new UI is the [https://help.gnome.org/users/gnome-help/stable/index.html.en GNOME Help] page.
-
-See the [[GNOME/Guide|GNOME Guide]] sub-article for a more detailed approach on installing, configuring, and using GNOME.
-
-== See also ==
-
-* [[Project:GNOME|Gentoo GNOME Project]] - The official Gentoo project (team) dedicated to maintaining GNOME-related ebuilds for Gentoo.
-** [[Project:GNOME/Policy|Policy]] - Official policies for the Gentoo GNOME project.
-** [[Project:GNOME/Gnome Team Ebuild Policies|Ebuild policies]] - Follow these directions when authoring GNOME ebuilds.
-** [[Project:GNOME/GNOME3-Upgrade-guide|GNOME 3 upgrade guide]] - Official instructions for upgrading between GNOME revisions.
-* [[GNOME/gdm|GNOME Display Manager]]
-* [[Epiphany]] - The GNOME web browser.
-* [[Gnome Applications Folders]] - How to customize the applications folders and improve the interface.
-* [[GNOME/GNOME_Without_systemd|GNOME Without systemd]] - How to run GNOME 3 under OpenRC, using Dantrell B.'s patchset.
-* [[Gnome Cheat Sheet]] - GNOME Cheat Sheet
-* [[MATE]] - A fork of GNOME 2 designed to retain GNOME 2's look and feel.
-
-== External resources ==
-
-* https://github.com/dantrell/gentoo-project-gnome-without-systemd - Dantrell B.'s "GNOME without systemd" homepage on GitHub.com
+See [http://http://www.gentoo.org/doc/en/gnome-config.xml The GNOME Configuration HOWTO] for more information on installing and using GNOME.
+==GNOME 2==
+The stable Gnome is a 2D desktop with 3D extensions.
+==GNOME 3==
+Gnome 3 is considered by many to be a radical departure. It uses 3D graphics capability by default, but will run in a 2D mode if the hardware does not support 3D. 
 
 [[Category:GNOME]]
-[[Category:Desktop environment]]
-[[Category:Meta]]
